# lit-saint

./: .buildinfo  .gitignore  CHANGELOG.md  LICENSE  README.md  README.rst  architecture.html  augmentations.html  example_classification.html  example_regression.html  example_regression.ipynb  genindex.html  index.html  objects.inv  py-modindex.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sonar-project.properties  tox.ini  uncertainty.html
.doctrees/: architecture.doctree  augmentations.doctree  environment.pickle  example_classification.doctree  example_regression.doctree  index.doctree  uncertainty.doctree
.doctrees/_generated/: lit_saint.doctree
.github/workflows/: release-pipeline.yml  release-please.yml  sonarcloud.yml  sphinx.yml
_generated/: lit_saint.html
_modules/: index.html
_modules/lit_saint/: augmentations.html  config.html  (+6 more)
_sources/: architecture.rst.txt  augmentations.rst.txt  index.rst.txt  uncertainty.rst.txt
benchmark/: benchmark.py  requirements-benchmark.txt
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
examples/: config.yaml  example.py  example_classification.ipynb  example_regression.ipynb
lit_saint/: __init__.py  augmentations.py  config.py  datamodule.py  dataset.py  model.py  models.py  modules.py
sphinx/: architecture.rst  conf.py  example_classification.ipynb  index.rst  requirements.txt
tests/: config.yaml  test_augmentations.py  test_datamodule.py  test_dataset.py  test_model.py  test_trainer.py
(+25 files in other folders)
