[bumpversion]
current_version = 0.2.0
commit = True
tag = True
tag_name = v{new_version}

[tool:pytest]
norecursedirs = 
	.git
	dist
	build
	examples
	benchmark
	sphinx
addopts = 
	--cov src/ --cov-report term-missing --cov-report xml --cov-report html
	--strict
	--doctest-modules
	--durations=0

[coverage:report]
exclude_lines = 
	pragma: no-cover
	pass

[flake8]
max-line-length = 120
exclude = .tox,*.egg,build,temp
select = E,W,F
doctests = True
verbose = 2
format = pylint
ignore = 
	E731  # Do not assign a lambda expression, use a def
	W504  # Line break occurred after a binary operator
	F401  # Module imported but unused
	F841  # Local variable name is assigned to but never used
	W605  # Invalid escape sequence 'x'

[check-manifest]
ignore = 
	*.yml
	.github
	.github/*

[metadata]
license_file = LICENSE
description-file = README.rst

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir = =src

[options.packages.find]
where = src
exclude = 
	tests

[bumpversion:file:src/lit_saint/version.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'
